--- a/public/pages/withdraw-req.html
+++ b/public/pages/withdraw-req.html
@@ -12,6 +12,7 @@
         <header><h1>Withdraw Request</h1></header>
         <form action="/withdraw-req" method="POST">
             <input type="text" name="Amount" placeholder="Amount (Rp)" required>
+            <textarea name="Info" placeholder="Info"></textarea>
             <button type="submit">Submit</button>
         </form>
     </article>
