mem req decline

--- a/public/pages/mem-request.html
+++ b/public/pages/mem-request.html
@@ -36,6 +36,7 @@
                     <td>{{ $elem.Info }}</td>
                     <td>
                         <form action="/mem-request-acc" method="POST">
+                            <input type="hidden" value="{{$elem.ID}}" name="ID">
                             <input type="hidden" value="{{$elem.User.ID}}" name="UID">
                             <input type="hidden" value="{{$elem.Date}}" name="Date">
                             <input type="hidden" value="{{$elem.Type}}" name="Type">
@@ -45,6 +46,7 @@
                             <button type="submit">accept</button>
                         </form>
                         <form action="/mem-request-dec" method="POST">
+                            <input type="hidden" value="{{$elem.ID}}" name="ID">
                             <button type="submit">decline</button>
                         </form>
                     </td>
