add adm-input and fix lil thing

--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -35,6 +35,7 @@
             <button><a href="/edit-coa">Edit Account</a></button>
             <hr>
             <p>Manage User</p>
+            <button><a href="/adm-input">Input</a></button>
             <button><a href="/manage-user">Manage</a></button>
             <button><a href="/mem-inspect">Inspect</a></button>
             <button><a href="/mem-request">Request List</a></button>
