add column isagent

--- a/public/pages/deposit-req.html
+++ b/public/pages/deposit-req.html
@@ -11,7 +11,7 @@
     <article>
         <header><h1>Deposit Request</h1></header>
         <form action="/deposit-req" method="POST">
-            <input type="text" name="Amount" placeholder="Amount (Rp)" required>
+            <input type="text" name="Amount" placeholder="Jumlah (Rp)" required>
             <select name="Type" required>
                 <option value="SS+">Simpanan Sukarela</option>
                 <option value="IW">Iuran Wajib</option>
