--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -19,6 +19,10 @@
                 <option value="Admin-Input">Admin Input</option>
                 <option value="Admin-Super">Admin-Super</option>
             </select>
+            <select name="IsAgent" required>
+                <option value="Y">Ya</option>
+                <option value="N">Tidak</option>
+            </select>
             <button type="submit">Submit</button>
         </form>
     </article>
