--- a/public/pages/withdraw-req.html
+++ b/public/pages/withdraw-req.html
@@ -11,7 +11,7 @@
     <article>
         <header><h1>Withdraw Request</h1></header>
         <form action="/withdraw-req" method="POST">
-            <input type="text" name="Amount" placeholder="Amount (Rp)" required>
+            <input type="text" name="Amount" placeholder="Jumlah (Rp)" required>
             <textarea name="Info" placeholder="Info"></textarea>
             <button type="submit">Submit</button>
         </form>
