--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -37,6 +37,7 @@
             <p>Manage User</p>
             <button><a href="/adm-input">Input</a></button>
             <button><a href="/manage-user">Manage</a></button>
+            <button><a href="/find-user">Find</a></button>
             <button><a href="/mem-inspect">Inspect</a></button>
             <button><a href="/mem-request">Request List</a></button>
             <button><a href="/register">Register</a></button>
