--- a/public/pages/member.html
+++ b/public/pages/member.html
@@ -24,7 +24,7 @@
         <details>
             <summary>Details</summary>
             <p>UID : {{ .User.ID }}</p>
-            <p>Member ID : {{ .User.MemID }}</p>
+            <p>ID Anggota : {{ .User.MemID }}</p>
             <p>Username : {{ .User.Username }}</p>
             <p>Peran : {{ .User.Role }}</p>
         </details>
@@ -68,9 +68,9 @@
         <table>
             <thead>
                 <th>ID</th>
-                <th>Date</th>
-                <th>Type</th>
-                <th>Amount (Rp)</th>
+                <th>Tanggal</th>
+                <th>Jenis</th>
+                <th>Jumlah (Rp)</th>
                 <th>Info</th>
                 <th>ApprovedBy</th>
             </thead>
