--- a/public/pages/murobahah-req.html
+++ b/public/pages/murobahah-req.html
@@ -11,7 +11,7 @@
     <article>
         <header><h1>Murobahah Request</h1></header>
         <form action="/murobahah-req" method="POST" enctype="multipart/form-data">
-            <input type="text" name="UIDBuyer" placeholder="UID Pihak Pertama" required>
+            <input type="text" name="UIDBuyer" placeholder="UID Pihak Pertama / Pembeli" required>
             <label for="Doc">Dokumen Akad Murobahah</label>
             <input type="file" id="" name="Doc" id="Doc" required>
             <label for="DueDate">Jatuh Tempo</label>
