--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -11,7 +11,7 @@
     <article>
         <header><h1>Register</h1></header>
         <form action="/register" method="POST">
-            <input type="text" name="MemID" placeholder="Member ID" required>
+            <input type="text" name="MemID" placeholder="ID Anggota" required>
             <input type="text" name="Username" placeholder="Username" required>
             <input type="password" name="Pass" placeholder="Pass" required>
             <select name="Role" required>
