--- a/public/pages/find-user.html
+++ b/public/pages/find-user.html
@@ -10,19 +10,29 @@
 <body>
     <article>
         <header><h1>Find User</h1></header>
+        <p>Find User</p>
+        <form action="/find-user" method="GET" name="findForm">
+            <select name="Filter" required>
+                <option value="Username">Username</option>
+                <option value="MemID">MemID</option>
+                <option value="Role">Role</option>
+            </select>
+            <input type="text" name="Key" placeholder="search key" required>
+            <button type="submit">Search</button>
+        </form>
         <table>
             <thead>
                 <th>ID</th>
+                <th>ID Anggota</th>
                 <th>Username</th>
-                <th>FullName</th>
                 <th>Role</th>
             </thead>
             <tbody>
                 {{ range $index, $elem := . }}
                 <tr>
                     <td>{{ $elem.ID }}</td>
+                    <td>{{ $elem.MemID }}</td>
                     <td>{{ $elem.Username }}</td>
-                    <td>{{ $elem.FullName }}</td>
                     <td>{{ $elem.Role }}</td>
                 </tr>
                 {{ end }}
