--- a/public/pages/error.html
+++ b/public/pages/error.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
+    <script src="public/javascript/nav.js" defer></script>
 </head>
 <body>
+    <div id="mynav"></div>
     <div class="container">
         <h1>Error</h1>
         <h2>{{ . }}</h2>
