--- a/public/pages/mem-request.html
+++ b/public/pages/mem-request.html
@@ -7,8 +7,10 @@
     <title>Member Request</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
     <script src="public/javascript/mem-req.js" defer></script>
+    <script src="public/javascript/nav.js" defer></script>
 </head>
 <body>
+    <div id="mynav"></div>
     <article>
         <header><h1>Member Request</h1></header>
         <p>Permintaan Anggota</p>
