--- a/public/pages/member.html
+++ b/public/pages/member.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
+    <script src="public/javascript/nav.js" defer></script>
     <style>
         a{
             display: block;
@@ -19,6 +20,7 @@
     </style>
 </head>
 <body>
+    <div id="mynav"></div>
     <article>
         <head><h1> {{ .User.Username }}</h1></head> <!--Be Replaced with .FullName-->
         <details>
