--- a/public/pages/murobahah-req.html
+++ b/public/pages/murobahah-req.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Murobahah Request</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
+    <script src="public/javascript/nav.js" defer></script>
 </head>
 <body>
+    <div id="mynav"></div>
     <article>
         <header><h1>Murobahah Request</h1></header>
         <form action="/murobahah-req" method="POST" enctype="multipart/form-data">
