--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
+    <script src="public/javascript/nav.js" defer></script>
     <style>
         a{
             display: block;
@@ -19,6 +20,7 @@
     </style>
 </head>
 <body>
+    <div id="mynav"></div>
     <div class="container">
         <article>
             <header><h1>Admin</h1></header>
@@ -37,7 +39,7 @@
             <p>Manage User</p>
             <button><a href="/adm-input">Input</a></button>
             <button><a href="/manage-user">Manage</a></button>
-            <button><a href="/find-user">Find</a></button>
+            <button><a href="/find-user" target="_blank">Find</a></button>
             <button><a href="/mem-inspect">Inspect</a></button>
             <button><a href="/mem-request">Request List</a></button>
             <button><a href="/register">Register</a></button>
