--- a/public/pages/find-user.html
+++ b/public/pages/find-user.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find User</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
+    <script src="public/javascript/nav.js" defer></script>
 </head>
 <body>
+    <div id="mynav"></div>
     <article>
         <header><h1>Find User</h1></header>
         <form action="/find-user" method="GET" name="findForm">
