--- a/public/pages/mem-inspect.html
+++ b/public/pages/mem-inspect.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Member Inspect</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
+    <script src="public/javascript/nav.js" defer></script>
 </head>
 <body>
+    <div id="mynav"></div>
     <article>
         <header><h1>Member Inspect</h1></header>
         <form action="/mem-inspect" method="GET">
