--- a/public/pages/new-coa.html
+++ b/public/pages/new-coa.html
@@ -7,8 +7,10 @@
     <title>New Chart of Account</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
     <script src="public/javascript/new-coa.js" defer></script>
+    <script src="public/javascript/nav.js" defer></script>
 </head>
 <body>
+    <div id="mynav"></div>
     <article>
         <header><h1>New Chart of Accounts</h1></header>
         <form name="newCOAForm" method="POST" action="/new-coa">
