--- a/public/pages/new-transaction.html
+++ b/public/pages/new-transaction.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Transaction</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
+    <script src="public/javascript/nav.js" defer></script>
 </head>
 <body>
+    <div id="mynav"></div>
     <article>
         <header><h1>New Transaction</h1></header>
         <form action="/new-transaction" method="POST">
