--- a/public/pages/summary.html
+++ b/public/pages/summary.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summary</title>
     <link rel="stylesheet" href="public/style/pico.min.css">
+    <script src="public/javascript/nav.js" defer></script>
 </head>
 <body>
+    <div id="mynav"></div>
     <article>
         <header><h1>Summary</h1></header>
         <p>Ledger Sum</p>
