--- a/public/pages/find-user.html
+++ b/public/pages/find-user.html
@@ -23,6 +23,9 @@
             <input type="text" name="Key" placeholder="Kata kunci.." required>
             <button type="submit">Search</button>
         </form>
+    </article>
+    <article>
+        <head><h1>Result</h1></head>
         <table>
             <thead>
                 <th>UID</th>
