--- a/public/pages/member.html
+++ b/public/pages/member.html
@@ -31,12 +31,14 @@
             <p>Username : {{ .User.Username }}</p>
             <p>Peran : {{ .User.Role }}</p>
             <p>Agent : {{ .User.IsAgent }}</p>
+            <p>Tel : {{ .User.Tel }}</p>
         </details>
         <p>Menu</p>
         <button><a href="/deposit-req">Deposit</a></button>
         <button><a href="/withdraw-req">Withdraw</a></button>
         <button><a href="/">Cicil Murobahah</a></button>
         <button><a href="/user-setting">Pengaturan</a></button>
+        <button>Logout</button>
         <hr>
         <p>Info Terbaru</p>
         <table>
