--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -25,6 +25,7 @@
                 <option value="Y">Ya</option>
                 <option value="N">Tidak</option>
             </select>
+            <input type="text" name="Tel" placeholder="Telephone" required>
             <button type="submit">Submit</button>
         </form>
     </article>
